# minit-cli

./: .gitignore  2026-03-23.jsonl  2026-03-24.jsonl  README.md  minit.spec  pyproject.toml  requirements.txt  setup.py  to-do.md
.github/workflows/: build-exe.yml  publish.yml
docs/: publishing.md  usage.md
landing/: CUSTOMIZATION.md  DEPLOYMENT.md  QUICK_START.md  README.md  SEO.md  docs.html  index.html  robots.txt  sitemap.xml
landing/assets/: script.js  style.css
minit_cli/: __init__.py  _path_setup.py  _server_worker.py  cli.py  config.py  metrics_log.py
minit_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
minit_cli/api/: server.py  store.py
minit_cli/collectors/: __init__.py  cpu.py  disk.py  memory.py  network.py  processes.py  sysinfo.py  users.py
minit_cli/dashboard/: live.py  web.py
tests/: test_cli.py  test_collectors.py  test_server.py  test_store.py
