[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minit-cli"
version = "0.3.0"
description = "A real-time machine-stats CLI dashboard with a JSON export API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "psutil>=5.9",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
minit = "minit_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["minit_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
