[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minit-cli"
version = "0.4.2"
description = "A real-time machine-stats CLI dashboard with a JSON export API"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Vamsi", email = "vamsi@vamsi-tech.org" }
]
maintainers = [
    { name = "Vamsi", email = "vamsi@vamsi-tech.org" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "psutil>=5.9",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://minit-cli.vamsi-tech.org/"
Repository = "https://github.com/vamsi-ehc/minit-cli"

[project.scripts]
minit = "minit_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["minit_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
